# projeto_especial

./: main.py  pyproject.toml
Web/: end.html  landing.html  main.html
Web/static/css/: end.css  landing.css  main.css
Web/static/js/: landing.js  main.js
